--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container{
     display: grid;
     background-color: antiquewhite;
-    grid-template-areas: "title top-bar" "menu content";
+    grid-template-areas: "top-bar top-bar" "menu content";
     height: 100vh;
     grid-template-columns: 15% 85%;
     grid-template-rows: 5% 95%;
@@ -16,50 +16,65 @@
 .menu{
     display: grid;
     grid-area: menu;
-    background-color: rgb(181, 228, 255);
+    background-color: rgb(200, 200, 200);
     grid-template-areas: "items" "footer";
     grid-template-columns: 1fr;
-    grid-template-rows: 95%;
-    border: 2px;
-    border-color: rgb(106, 183, 228);
-    border-style: solid;
+    grid-template-rows: 95% 5%;
 }
 
 .content{
-    display: grid;
+    display: flex;
     grid-area: content;
-    background-color: rgb(255, 238, 181);
-    grid-template-areas: "top-bar" "dashboard";
-    grid-template-rows: 100%;
-    border: 2px;
-    border-color: rgb(226, 198, 104);
-    border-style: solid;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(50, 50, 61);
+    color: rgb(200, 200, 200);
 }
 
 .top-bar{
     display: flex;
     grid-area: top-bar;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding-right: 10px;
     padding-left: 10px;
     align-items: center;
+    background-color: rgb(27, 27, 37);
+    color: rgb(200, 200, 200);
+}
+
+.top-bar svg{
+    width: 30px;
+    fill: rgb(200, 200, 200);
 }
 
 .dashboard{
     display: flex;
-    grid-area: dashboard;
-    border: 0px;
-    border-top: 1px;
-    border-color: rgb(226, 198, 104);
-    border-style: solid;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 70%;
+    height: 80%;
+    background-color: rgb(200, 200, 200);
+    border-radius: 6px;
+    color: rgb(27, 27, 37);
+}
+
+.dashboard p{
+    font-size: 25px;
+    padding: 10px;
+}
+
+.dashboard-content{
+    width: 100%;
+    height: 90%;
+    border-radius: 5px;
+    background-color: rgb(27, 27, 37);
+    color: rgb(200, 200, 200);
 }
 
 .title{
     display: flex;
     grid-area: title;
     align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
 }
 
 .title p{
@@ -69,48 +84,39 @@
     padding-left: 10px;
 }
 
-.circle-button{
-    width: 20px;
-    height: 20px;
-    border-style: solid;
-    border-color: rgb(167, 48, 48);
-    border-radius: 15px;
-    background-color: transparent;
-    justify-self: center;
-}
-
 .items{
-    display: grid;
+    display: flex;
     grid-area: items;
-    grid-template-columns: 1fr;
-    grid-template-rows: minmax(min-content, 15%);
+    flex-direction: column;
+    align-items: center;
+    padding-top: 5px;
 }
 
 .item{
     display: flex;
     align-items: center;
-    border: 0px;
-    border-top: 1px;
-    border-bottom: 1px;
-    border-color: rgb(106, 183, 228);
-    border-style: solid;
+    width: 95%;
+    margin-bottom: 5px;
+    padding: 10px 10px;
+    height: fit-content;
+    background-color: rgb(27, 27, 37);
+    color: rgb(200, 200, 200);
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
 .item p{
     font-size: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
-    padding-left: 10px;
 }
 
 .footer{
     display: flex;
     grid-area: footer;
     align-items: center;
-    border: 0px;
-    border-top: 1px;
-    border-color: rgb(106, 183, 228);
-    border-style: solid;
+    background-color: rgb(27, 27, 37);
+    color: rgb(200, 200, 200);
 }
 
 .footer p{
