--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@
 .top-bar{
     display: flex;
     grid-area: top-bar;
-    justify-content: space-between;
     padding-right: 10px;
     padding-left: 10px;
     align-items: center;
@@ -45,8 +44,12 @@
 }
 
 .top-bar svg{
-    width: 30px;
+    width: 1.7em;
     fill: var(--second-color);
+}
+
+.top-bar svg:last-child{
+    margin-left: auto;
 }
 
 .dashboard{
@@ -76,16 +79,8 @@
 }
 
 .title{
-    display: flex;
-    grid-area: title;
-    align-items: center;
-}
-
-.title p{
     font-size: 1.5em;
-    /* overflow: hidden;
-    text-overflow: ellipsis; */
-    padding-left: 10px;
+    padding: 0 10px 0;
 }
 
 .paragraph{
