--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,56 @@
-*{
+html, body{
     margin: 0;
-    padding: 0;
+    height: 100%;
+}
+
+a{
+    text-decoration: none;
+}
+
+.container{
+    width: 100vw;
+    height: 100%;
+}
+
+.top-bar{
+    width: 100%;
+    height: 3em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.item{
+    width: fit-content;
+    font-size: 1.5em;
+    color: rgb(90, 90, 90);
+}
+
+.item:hover{
+    color: rgb(180, 180, 180);
+    transition: 0.2s ease;
+}
+
+.languages{
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.language-button{
+    width: 3em;
+    height: 100%;
+    margin-right: 1em;
+    background-color: gray;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 0.9em 0;
 }
