--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,12 @@ a{
     width: 100%;
     height: 3em;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
 .menu{
-    width: 30%;
+    margin: auto;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -30,6 +30,7 @@ a{
 
 .item{
     width: fit-content;
+    margin-right: 1em;
     font-size: 1.5em;
     color: rgb(90, 90, 90);
 }
