--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
-*{
+html, body{
     margin: 0;
-    padding: 0;
+    height: 100%;
+}
+
+a{
+    text-decoration: none;
+}
+
+.container{
+    width: 100vw;
+    height: 100%;
+}
+
+.side-bar{
+    width: 15em;
+    background-color: gray;
 }
