--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ a{
 
 .menu{
     margin: auto;
+    column-gap: 1em;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -30,7 +31,6 @@ a{
 
 .item{
     width: fit-content;
-    margin-right: 1em;
     font-size: 1.5em;
     color: rgb(90, 90, 90);
 }
@@ -51,6 +51,7 @@ a{
     height: 100%;
     margin-right: 1em;
     background-color: gray;
+    color: white;
     text-align: center;
     box-sizing: border-box;
     padding: 0.9em 0;
