--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,18 @@ html, body{
     width: 100vw;
     height: 100%;
 }
+
+.galery{
+    width: 80%;
+    height: 100%;
+    display: flex;
+    gap: 0.5em;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    align-items: flex-start;
+}
+
+.image{
+    /* width: 300px; */
+    border-radius: 0.5em;
+}
